<resources>
    <string name="app_name">CV v2</string>
    <string name="fullname">Name</string>
    <string name="email">Email</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="next">Next</string>
    <string name="skills">Skills</string>
    <string name="textview">TextView</string>
    <string name="ios">Ios</string>
    <string name="android">Android</string>
    <string name="flutter">Flutter</string>
    <string name="submit">Submit</string>
    <string name="language">Language</string>
    <string name="hobbies">Hobbies</string>
    <string name="arabic">Arabic</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="emailtest">ahmed.mahouachi@esprit.tn</string>
    <string name="nametest">Mahouachi Ahmed</string>
    <string name="games">Games</string>
    <string name="sport">Sport</string>
    <string name="movies">Movies</string>
    <string name="emptyField">Must not be empty !</string>
    <string name="emailError">Check your email !</string>
    <string name="hello_blank_fragment">Hello hobbies fragment</string>
    <string name="todo">TODO</string>
    <string name="my_career">my career</string>
    <string name="experience">Experience</string>
    <string name="education">education</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="add_education">Add Education</string>
    <string name="add_experience">add experience</string>
    <string name="company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="add_experice">Add Experice</string>
    <string name="university_name">University Name</string>
    <string name="university_adress">University Adress</string>
    <string name="compose">Compose</string>
    <string name="companyDescription">Description</string>

</resources>